[metadata]
name = pipeline_csv
version = 1.7
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Pipeline inline inspection data as CSV file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/pipeline.csv
project_urls =
    Bug Tracker = https://github.com/vb64/pipeline.csv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = pipeline_csv
python_requires = >=3.6
include_package_data=True
